[gd_scene load_steps=38 format=3 uid="uid://crbsr60t6r1m7"]

[ext_resource type="Script" path="res://src/entities/player.gd" id="1_7dypm"]
[ext_resource type="Resource" uid="uid://lahuhpmit51d" path="res://assets/resources/default_settigns.res" id="2_16xxd"]
[ext_resource type="Environment" uid="uid://kttecvt1ttwi" path="res://assets/entities/GameEnv.res" id="2_vc100"]
[ext_resource type="Texture2D" uid="uid://c7tcfslg2mnje" path="res://assets/sprites/E.png" id="3_wd4en"]
[ext_resource type="Texture2D" uid="uid://bbonv0wcj780o" path="res://assets/sprites/Mouse.png" id="4_m0tmw"]
[ext_resource type="Texture2D" uid="uid://bj4n2cdjwge15" path="res://assets/sprites/crosshair.svg" id="4_wrldi"]
[ext_resource type="Script" path="res://src/UI/money_lable.gd" id="5_7d3dc"]
[ext_resource type="Script" path="res://src/UI/timer.gd" id="5_acukg"]
[ext_resource type="LabelSettings" uid="uid://dm7x4ep8081ml" path="res://assets/entities/InventoryLable.res" id="5_vxbpb"]
[ext_resource type="Script" path="res://src/UI/score_label.gd" id="6_55kp7"]
[ext_resource type="Texture2D" uid="uid://cway3ky1o72l4" path="res://assets/sprites/Lock.png" id="7_3e0sb"]
[ext_resource type="Theme" uid="uid://tvghkcxmk8ud" path="res://assets/resources/main_ui_theme.res" id="8_1xho4"]
[ext_resource type="Shader" path="res://src/shaders/pixelator.gdshader" id="8_howxo"]
[ext_resource type="FontFile" uid="uid://dowgm3oqarlgd" path="res://UI_assets/fonts/KleinHeadline-BoldOblique.ttf" id="9_qyvst"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bc8x3"]
radius = 0.2
height = 2.1

[sub_resource type="Environment" id="Environment_qase5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yeyrw"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.392157)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b12i"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glmdn"]
bg_color = Color(0, 0, 0, 0.196078)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imk2t"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n8ag"]
bg_color = Color(0, 0, 0, 0.172549)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ald7"]
bg_color = Color(1, 0.407843, 0.337255, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_2kudt"]
font = ExtResource("9_qyvst")
font_size = 30
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_euq3r"]
font = ExtResource("9_qyvst")
font_size = 30
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kbuc5"]
render_priority = 0
shader = ExtResource("8_howxo")
shader_parameter/pixel_size = 2

[sub_resource type="QuadMesh" id="QuadMesh_crtys"]
material = SubResource("ShaderMaterial_kbuc5")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ka62s"]
radius = 0.2
height = 2.1

[sub_resource type="ViewportTexture" id="ViewportTexture_jlp4m"]
viewport_path = NodePath("KeyBillboards/PressKeyE/SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_7ii1m"]
font_size = 120
outline_size = 80
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_i2v2j"]
viewport_path = NodePath("KeyBillboards/HoldKeyE/SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_oreik"]
font_size = 120
outline_size = 80
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ecie0"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("3_wd4en")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_utgws"]
size = Vector2(0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_euc5n"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("4_m0tmw")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_0xyj0"]
size = Vector2(0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7vmlr"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("7_3e0sb")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_dr7qk"]
size = Vector2(0.2, 0.2)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_7dypm")
settings = ExtResource("2_16xxd")
acceleration = 7.0
stamina_delition = 20.0
stamina_regeneration = 15.0
stamina_bar_blink_speed = 10.0
stamina_bar_color_lerp_speed = 10.0
player_stand_heigh = 2.1
head_stand_height = 0.75
player_crouch_heigh = 0.7
head_crouch_height = 0.2
head_bob_ammount = 20.0

[node name="Body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bc8x3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.75, 2.08165e-12)

[node name="Eyes" type="Camera3D" parent="Head"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
cull_mask = 1048573
environment = ExtResource("2_vc100")
fov = 90.0

[node name="InteractionRay" type="RayCast3D" parent="Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
target_position = Vector3(0, 0, -1.9)
collision_mask = 3

[node name="Hand" type="Node3D" parent="Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.06947e-09, 0, -0.942012)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Eyes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Eyes/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1024, 576)
render_target_update_mode = 4

[node name="TutorialCamera" type="Camera3D" parent="Head/Eyes/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.08165e-12, 0.75, 2.08165e-12)
cull_mask = 2
environment = SubResource("Environment_qase5")
fov = 90.0

[node name="PlayerUI" type="Control" parent="Head/Eyes"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="Crosshair" type="Control" parent="Head/Eyes/PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairSprite" type="Sprite2D" parent="Head/Eyes/PlayerUI/Crosshair"]
texture_filter = 4
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_wrldi")

[node name="HoldInteractionBar" type="ProgressBar" parent="Head/Eyes/PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 38.79
offset_right = 50.0
offset_bottom = 45.79
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_yeyrw")
theme_override_styles/fill = SubResource("StyleBoxFlat_1b12i")
show_percentage = false

[node name="LockPickingBar" type="ProgressBar" parent="Head/Eyes/PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.413
anchor_top = 0.59
anchor_right = 0.587
anchor_bottom = 0.6
offset_left = 0.22398
offset_top = -0.200027
offset_right = -0.224014
offset_bottom = 0.319983
theme_override_styles/background = SubResource("StyleBoxFlat_glmdn")
theme_override_styles/fill = SubResource("StyleBoxFlat_imk2t")
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="Head/Eyes/PlayerUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.332
anchor_top = 0.81
anchor_right = 0.668
anchor_bottom = 0.821
offset_left = 0.53598
offset_top = 0.11996
offset_right = 0.463951
offset_bottom = -0.00802565
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_2n8ag")
theme_override_styles/fill = SubResource("StyleBoxFlat_4ald7")
value = 100.0
show_percentage = false

[node name="InventoryInfo" type="Label" parent="Head/Eyes/PlayerUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 8.0
offset_right = 172.0
offset_bottom = 57.0
text = "ITEMS: 0/0"
label_settings = ExtResource("5_vxbpb")

[node name="ScoreLabel" type="Label" parent="Head/Eyes/PlayerUI"]
layout_mode = 0
offset_left = 19.0
offset_top = 51.0
offset_right = 250.0
offset_bottom = 93.0
text = "SCORE: 1234560"
label_settings = SubResource("LabelSettings_2kudt")
script = ExtResource("6_55kp7")

[node name="PauseMenu" type="Control" parent="Head/Eyes/PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Head/Eyes/PlayerUI/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.398
anchor_top = 0.286
anchor_right = 0.602
anchor_bottom = 0.714
offset_left = 0.503967
offset_top = 0.171997
offset_right = -0.504089
offset_bottom = -0.172028
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_1xho4")
tab_alignment = 1

[node name="Pause" type="Label" parent="Head/Eyes/PlayerUI/PauseMenu/TabContainer"]
layout_mode = 2

[node name="Buttons" type="Control" parent="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.35
offset_left = 0.199999
offset_right = 0.0339907
offset_bottom = -5.75
grow_horizontal = 2
text = "Resume"

[node name="Options" type="Button" parent="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.5
offset_left = -0.0120023
offset_top = -0.0650016
offset_right = 3.09799
offset_bottom = 0.0649943
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="ExitGame" type="Button" parent="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.55
anchor_right = 0.8
anchor_bottom = 0.65
offset_left = 3.2
offset_top = 7.99999
offset_right = 2.8
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 0
text = "Exit"

[node name="MoneyLabel" type="Label" parent="Head/Eyes/PlayerUI/PauseMenu"]
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 133.0
offset_right = 275.0
offset_bottom = 175.0
text = "MONEY: 1000"
label_settings = SubResource("LabelSettings_2kudt")
script = ExtResource("5_7d3dc")

[node name="OptionsMenu" type="Control" parent="Head/Eyes/PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Head/Eyes/PlayerUI/OptionsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.305
anchor_top = 0.292
anchor_right = 0.695
anchor_bottom = 0.708
offset_left = -225.0
offset_top = -135.0
offset_right = 225.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_1xho4")
tab_alignment = 1

[node name="Options" type="Label" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer"]
custom_minimum_size = Vector2(450, 239)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options"]
custom_minimum_size = Vector2(450, 239)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 0.992
offset_right = -0.100012
offset_bottom = -0.0880104

[node name="Buttons" type="Control" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer"]
custom_minimum_size = Vector2(450, 280)
layout_mode = 2

[node name="HeadBob" type="CheckBox" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons"]
layout_mode = 1
offset_left = 286.0
offset_top = 44.0
offset_right = 405.0
offset_bottom = 75.0
button_pressed = true
text = "HeadBob"

[node name="Close" type="Button" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -32.0
offset_right = 43.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="SensitivitySlider" type="HSlider" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons"]
layout_mode = 0
offset_left = 47.0
offset_top = 107.0
offset_right = 160.0
offset_bottom = 123.0
min_value = 0.01
max_value = 0.1
step = 0.005
value = 0.01

[node name="Name" type="Label" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons/SensitivitySlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 248.0
offset_top = -10.0
offset_right = 323.0
offset_bottom = 13.0
grow_vertical = 2
text = "Sensitivty"

[node name="Value" type="Label" parent="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons/SensitivitySlider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_top = -25.0
offset_right = 12.5
offset_bottom = -2.0
grow_horizontal = 2
text = "0.0
"

[node name="TimerContainer" type="Control" parent="Head/Eyes/PlayerUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.551971
offset_right = 0.551971
offset_bottom = 0.159996
grow_horizontal = 2
script = ExtResource("5_acukg")
time = 120.0

[node name="Timer1" type="Label" parent="Head/Eyes/PlayerUI/TimerContainer"]
layout_mode = 2
anchor_left = 0.2
anchor_right = 0.8
offset_left = 197.651
offset_top = 4.0
offset_right = -104.651
offset_bottom = 46.0
grow_horizontal = 2
text = "000"
label_settings = SubResource("LabelSettings_euq3r")
horizontal_alignment = 2

[node name="Timer2" type="Label" parent="Head/Eyes/PlayerUI/TimerContainer"]
layout_mode = 2
anchor_left = 0.2
anchor_right = 0.8
offset_left = -31.6688
offset_top = 3.0
offset_right = 16.6688
offset_bottom = 45.0
grow_horizontal = 2
text = "00."
label_settings = SubResource("LabelSettings_euq3r")
horizontal_alignment = 2

[node name="Timer3" type="Label" parent="Head/Eyes/PlayerUI/TimerContainer"]
layout_mode = 2
anchor_left = 0.2
anchor_right = 0.8
offset_left = 126.691
offset_top = 3.0
offset_right = -235.591
offset_bottom = 45.0
grow_horizontal = 2
text = "00."
label_settings = SubResource("LabelSettings_euq3r")
horizontal_alignment = 2

[node name="Pixelator" type="MeshInstance3D" parent="Head/Eyes"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, -0.1)
mesh = SubResource("QuadMesh_crtys")
skeleton = NodePath("../../..")

[node name="OmniLight3D" type="OmniLight3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
light_energy = 0.1
omni_range = 0.85

[node name="BodyMesh" type="MeshInstance3D" parent="."]
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ka62s")

[node name="CrouchCheckRay" type="RayCast3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 1.05, 2.08165e-12)
target_position = Vector3(2.08165e-12, 0.5, 2.08165e-12)

[node name="KeyBillboards" type="Node3D" parent="."]

[node name="PressKeyE" type="Sprite3D" parent="KeyBillboards"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 2.08165e-12, 2.08165e-12, 2.08165e-12)
billboard = 1
texture_filter = 2
texture = SubResource("ViewportTexture_jlp4m")

[node name="SubViewport" type="SubViewport" parent="KeyBillboards/PressKeyE"]
transparent_bg = true
size = Vector2i(1840, 420)

[node name="Label" type="Label" parent="KeyBillboards/PressKeyE/SubViewport"]
offset_left = 20.0
offset_top = 100.0
offset_right = 362.0
offset_bottom = 265.0
text = "Releasse               take out items"
label_settings = SubResource("LabelSettings_7ii1m")

[node name="TextureRect" type="TextureRect" parent="KeyBillboards/PressKeyE/SubViewport"]
offset_left = 500.0
offset_top = -50.0
offset_right = 1012.0
offset_bottom = 462.0
texture = ExtResource("3_wd4en")

[node name="HoldKeyE" type="Sprite3D" parent="KeyBillboards"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 2.08165e-12, 2.08165e-12, 2.08165e-12)
billboard = 1
texture = SubResource("ViewportTexture_i2v2j")

[node name="SubViewport" type="SubViewport" parent="KeyBillboards/HoldKeyE"]
transparent_bg = true
size = Vector2i(1140, 430)

[node name="Label" type="Label" parent="KeyBillboards/HoldKeyE/SubViewport"]
offset_left = 20.0
offset_top = 110.0
offset_right = 291.0
offset_bottom = 275.0
text = "Hold               to exit"
label_settings = SubResource("LabelSettings_oreik")

[node name="TextureRect" type="TextureRect" parent="KeyBillboards/HoldKeyE/SubViewport"]
offset_left = 270.0
offset_top = -50.0
offset_right = 782.0
offset_bottom = 462.0
texture = ExtResource("3_wd4en")

[node name="KeyE" type="MeshInstance3D" parent="KeyBillboards"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
layers = 2
material_override = SubResource("StandardMaterial3D_ecie0")
cast_shadow = 0
mesh = SubResource("QuadMesh_utgws")
skeleton = NodePath("../..")

[node name="LeftMouseButton" type="MeshInstance3D" parent="KeyBillboards"]
layers = 2
material_override = SubResource("StandardMaterial3D_euc5n")
mesh = SubResource("QuadMesh_0xyj0")

[node name="LockIcon" type="MeshInstance3D" parent="KeyBillboards"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
layers = 2
material_override = SubResource("StandardMaterial3D_7vmlr")
mesh = SubResource("QuadMesh_dr7qk")

[connection signal="pressed" from="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Head/Eyes/PlayerUI/PauseMenu/TabContainer/Pause/Buttons/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="toggled" from="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons/HeadBob" to="." method="_on_head_bob_toggled"]
[connection signal="pressed" from="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons/Close" to="." method="_on_close_pressed"]
[connection signal="value_changed" from="Head/Eyes/PlayerUI/OptionsMenu/TabContainer/Options/ScrollContainer/Buttons/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
